# cp2k

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .packit.yaml  .pre-commit-config.yaml  0001-Update-scalapack.patch  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  COPYRIGHT  Dockerfile  INSTALL  INSTALL.md  Makefile  NLMO.md  README  README.cmake  README.md  README_cmake.md  REVISION  SUMMARY.md  TEST_DIRS  TEST_TYPES  VERSION  config.mk  cp2k.pc.in  cp2k_build_master.md  gw_methods.F  make_cp2k.sh  make_pretty.sh  test  test.sh  test.txt  tests.slurm
src/: CMakeLists.txt  MACHINEDEFS.ABSOFT  MACHINEDEFS.DEC  MACHINEDEFS.IBM  MACHINEDEFS.IRIX  MACHINEDEFS.PGI  MACHINEDEFS.SGI  MACHINEDEFS.T3E  Makefile  Makefile.absoft  Makefile_dec  OBJECTDEFS  PACKAGE  README.md  TODO  _el_typename__list_types.instantiation  _el_typename__list_types.template  _lib__array__nametype1__sort.instantiation  _lib__array__nametype1__sort.template  accint_weights_forces.F  ace_c_api.cpp  ace_nlist.F  ace_wrapper.F  admm_dm_methods.F  admm_dm_types.F  admm_methods.F  admm_types.F  admm_utils.F  ai_angmom.F  ai_coulomb.F  ai_coulomb_test.F  ai_derivatives.F  ai_elec_field.F  ai_eri_debug.F  ai_fermi_contact.F  ai_geminals.F  ai_geminals_debug.F  ai_geminals_utils.F  ai_kinetic.F  ai_moments.F  (+2026 more)
src/acc/: PACKAGE  acc_device.F  acc_devmem.F  acc_devmem__nametype_.template  acc_devmem_c4.f90  acc_devmem_c8.f90  acc_devmem_i4.f90  acc_devmem_i8.f90  acc_devmem_r4.f90  acc_devmem_r8.f90  acc_event.F  acc_hostmem.F  acc_hostmem__nametype1_.instantiation  acc_hostmem__nametype1_.template  acc_hostmem_c.f90  acc_hostmem_d.f90  acc_hostmem_i.f90  acc_hostmem_l.f90  acc_hostmem_r.f90  acc_hostmem_z.f90  acc_kinds.F  acc_stream.F  dummy_c_bindings.F
src/aobasis/: PACKAGE  ai_angmom.F  ai_construct_shg.F  ai_contraction.F  ai_contraction_sphi.F  ai_coulomb.F  ai_coulomb_test.F  ai_derivatives.F  ai_elec_field.F  ai_eri_debug.F  ai_fermi_contact.F  ai_geminals.F  ai_geminals_debug.F  ai_geminals_utils.F  ai_kinetic.F  ai_moments.F  ai_onecenter.F  ai_oneelectron.F  ai_operator_ra2m.F  ai_operators_r12.F  ai_operators_r12.h  ai_os_rr.F  ai_overlap.F  ai_overlap3.F  ai_overlap3_debug.F  ai_overlap_aabb.F  ai_overlap_debug.F  ai_overlap_new.F  ai_overlap_ppl.F  ai_s_contract_shg.F  ai_shg_overlap.F  ai_spin_orbit.F  ai_verfc.F  ao_util.F  aux_basis_set.F  basis_set_container_types.F  basis_set_types.F  orbital_pointers.F  orbital_symbols.F  orbital_transformation_matrices.F  (+4 more)
src/arch/: PACKAGE  ma_config.F  ma_topology.F  machine_architecture_types.F  machine_architecture_utils.F
src/arch_lib/: OBJECTDEFS  ma_affinity.F  ma_c_mpi_calls.F  ma_config.F  ma_dummy_c_bindings.F  ma_errors.F  ma_kinds.F  ma_machine.F  ma_message_passing.F  ma_message_passing__nametype1_.template  ma_message_passing_d.F  ma_message_passing_z.F  ma_process_mapping.F  ma_topology.F  machine_architecture.F  machine_architecture_types.F  machine_architecture_utils.F
src/arnoldi/: PACKAGE  arnoldi.fypp  arnoldi_api.F  arnoldi_data_manipulation.f90  arnoldi_data_manipulation__nametype1_.template  arnoldi_data_manipulation_c.f90  arnoldi_data_manipulation_d.f90  arnoldi_data_manipulation_s.f90  arnoldi_data_manipulation_z.f90  arnoldi_data_methods.F  arnoldi_data_selection.f90  arnoldi_data_selection__nametype1_.template  arnoldi_data_selection_c.f90  arnoldi_data_selection_d.f90  arnoldi_data_selection_s.f90  arnoldi_data_selection_z.f90  arnoldi_geev.F  arnoldi_methods.F  arnoldi_methods_low__nametype1_.instantiation  arnoldi_methods_low__nametype1_.template  arnoldi_methods_low_c.f90  arnoldi_methods_low_d.f90  arnoldi_methods_low_s.f90  arnoldi_methods_low_z.f90  arnoldi_types.F  arnoldi_vector.F
src/base/: PACKAGE  base_hooks.F  base_uses.f90  fyppinit.py  kinds.F  machine.F  machine_absoft.f90  machine_aix.f90  machine_cce.f90  machine_cpuid.c  machine_cpuid.h  machine_dec.f90  machine_g95.f90  machine_gfortran.f90  machine_intel.f90  machine_internal.F  machine_irix.f90  machine_nag.f90  machine_pgi.f90  machine_posix.f90  machine_sun.f90  machine_sx.f90  machine_t3e.f90  machine_xt3.f90  machine_xt5.f90  openmp_trace.c
src/common/: OBJECTDEFS  PACKAGE  array_sort.fypp  bessel_lib.F  bibliography.F  callgraph.F  cg_test.F  cp_array__nametype1__sort.instantiation  cp_array__nametype1__utils.template  cp_array_i4_sort.F  cp_array_i8_sort.F  cp_array_i_sort.F  cp_array_i_utils.F  cp_array_logical_utils.F  cp_array_r_sort.F  cp_array_r_utils.F  cp_array_sort.F  cp_array_sort.fypp  cp_array_sort__nametype1_.instantiation  cp_array_sort__nametype1_.template  cp_array_sort_i4.F  cp_array_sort_i8.F  cp_array_sort_r.F  cp_array_sort_s.F  cp_array_utils.F  cp_array_utils.fypp  cp_array_utils__nametype1_.instantiation  cp_array_utils__nametype1_.template  cp_array_utils_i.F  cp_array_utils_logical.F  cp_array_utils_r.F  cp_blacs_calls.F  cp_blacs_env.F  cp_cfm_basic_linalg.F  cp_cfm_diag.F  cp_cfm_types.F  cp_common_uses.f90  cp_data_dir.c  cp_dbcsr_cholesky.F  cp_dbcsr_diag.F  (+162 more)
src/cuda/: LIBCUDA_DEPENDENCIES  NVOBJECTDEFS  PACKAGE  fft_cuda_z.cu  ma_cuda_prop.cu  pw_cuda_z.cu
src/dbcsr/: PACKAGE  array_types.F  btree__nametype1__k__nametype2__v.instantiation  btree__nametype1__k__nametype2__v.template  btree_i8_k_cp2d_v.F  btree_i8_k_dp2d_v.F  btree_i8_k_sp2d_v.F  btree_i8_k_zp2d_v.F  dbcsr_acc_operations.F  dbcsr_api.F  dbcsr_api.f90  dbcsr_api__nametype1_.template  dbcsr_api_c.f90  dbcsr_api_d.f90  dbcsr_api_s.f90  dbcsr_api_z.f90  dbcsr_arnoldi.F  dbcsr_arnoldi_data_manipulation__nametype1_.template  dbcsr_arnoldi_data_manipulation_c.f90  dbcsr_arnoldi_data_methods.F  dbcsr_arnoldi_data_selection__nametype1_.instantiation  dbcsr_arnoldi_data_selection_d.f90  dbcsr_arnoldi_methods.F  dbcsr_arnoldi_methods_low__nametype1_.template  dbcsr_arnoldi_methods_low_c.f90  dbcsr_arnoldi_methods_low_d.f90  dbcsr_arnoldi_methods_low_s.f90  dbcsr_arnoldi_methods_low_z.f90  dbcsr_arnoldi_types.F  dbcsr_array__nametype1__sort.instantiation  dbcsr_array__nametype1__sort.template  dbcsr_array_d_sort.F  (+141 more)
(+15475 files in other folders)
